use custom equality checker